practica-13.2/ejercicio-02/nfs-server-template.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: |
  Esta plantilla crea un grupo de seguridad con los puertos 22, 80, 443 y 3306 (MySQL) abiertos,
  crea una instancia EC2 con la AMI de Ubuntu Server 22.04 y le asocia el grupo de seguridad.
Resources:
  # Creación de la instancia BackEnd
  SgBackend:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Grupo de seguridad de la instancia Backend
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 0.0.0.0/0
  EC2Backend:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-06878d265978313ca
      InstanceType: t2.medium
      SecurityGroups:
        - !Ref SgBackend
      KeyName: vockey
      Tags:
        - Key: Name
          Value: backend

    # Creación del balanceador de carga
  SgBalancer:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Grupo de seguridad del balanceador de carga
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
  EC2Balancer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-06878d265978313ca
      InstanceType: t2.medium
      SecurityGroups:
        - !Ref SgBalancer
      KeyName: vockey
      Tags:
        - Key: Name
          Value: load-balancer
  MyEIP:
    Type: AWS::EC2::EIP
  MyEIPAssociation:
    Type: AWS::EC2::EIPAssociation
    DependsOn: MyEIP
    Properties:
      AllocationId: !GetAtt MyEIP.AllocationId
      InstanceId: !Ref EC2Backend

  # Creacion de la instancia FrontEnd-01
  SgFrontend:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Grupo de seguridad de la instancia Frontend-01
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
  EC2Frontend01:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-06878d265978313ca
      InstanceType: t2.medium
      SecurityGroups:
        - !Ref SgFrontend
      KeyName: vockey
      Tags:
        - Key: Name
          Value: frontend-01
    
    # Creacion de la instancia FrontEnd-02
  EC2Frontend2:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-06878d265978313ca
      InstanceType: t2.medium
      SecurityGroups:
        - !Ref SgFrontend
      KeyName: vockey
      Tags:
        - Key: Name
          Value: frontend-02

  # Creación del servidor NFS
  SgNFS:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Grupo de seguridad del servidor NFS
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 2048
          ToPort: 2048
          CidrIp: 0.0.0.0/0
  EC2NFS:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-06878d265978313ca
      InstanceType: t2.medium
      SecurityGroups:
        - !Ref SgNFS
      KeyName: vockey
      Tags:
        - Key: Name
          Value: nfs-server
